webapp/src/scss/_layout.scss
body {
  overflow: hidden;
}

#app {
  display: flex;
  height: 100vh;
  width: 100vw;

  > main {
    width: calc(100% - 224px);
    border-left: $border-width solid $border-color;
    border-top-left-radius: $border-radius * 1.5;
    border-bottom-left-radius: $border-radius * 1.5;
    background-color: $dfi-scent;

    .main-wrapper {
      display: flex;
      flex-direction: column;
      height: 100vh;
      position: relative;
    }

    .header-bar {
      position: relative;
      height: 112px;
      border-bottom: $border-width solid $border-color;
      padding: 24px 32px;
      display: flex;
      align-items: flex-end;
      justify-content: space-between;
      flex-shrink: 0;

      &:before {
        content: '';
        position: absolute;
        width: 100%;
        height: 100%;
        left: 0;
        top: 0;
        z-index: -1;
        -webkit-app-region: drag;
      }

      > h1,
      > .nav,
      > .btn-group,
      > .btn {
        flex-grow: 1;
      }

      h1 {
        margin-bottom: 0;
      }

      .nav {
        margin-bottom: -8px;
      }

      > .btn-group {
        display: flex;
        justify-content: flex-end;
        margin-right: -16px;
        margin-bottom: -8px;

        .btn {
          flex-grow: 0;
        }
      }

      .header-bar-back {
        position: absolute;
        left: 12px;
        top: 12px;
        text-transform: uppercase;
      }

      .update-available {
        position: absolute;
        top: 16px;
        right: 24px;

        > * {
          display: block;
        }

        > .btn {
          text-transform: none;
          letter-spacing: 0.21px;
          font-weight: $font-weight-medium;

          &:hover {
            color: $gray-900;
          }

          svg {
            color: $green;
            margin-right: 4px;
            width: 12px;
            height: 12px;
          }
        }
      }

      @include media-breakpoint-down(sm) {
        .btn span {
          display: none;
        }

        .btn svg {
          margin-right: 0;
        }
      }
    }

    .content {
      flex-grow: 1;
      overflow: auto;
      padding: 32px;

      section {
        margin-bottom: 8px;
      }
    }

    .footer-bar {
      position: relative;
      z-index: $zindex-modal;
      padding: 16px 32px;
      background-color: $body-bg;
      border-top: $border-width solid $border-color;
      border-bottom-left-radius: $border-radius * 1.5;
      width: 100%;
    }

    .footer-sheet {
      min-height: 192px;
      padding-top: 1rem;
      padding-bottom: 1rem;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .footer-sheet-icon {
      width: 48px;
      height: 48px;
      color: $green;
      margin-bottom: 1rem;
    }
  }

  .footer-backdrop {
    position: absolute;
    left: 0;
    top: 0;
    z-index: $zindex-modal-backdrop;
    width: 100%;
    height: 100%;
    background-color: $modal-backdrop-bg;
    opacity: $modal-backdrop-opacity;
    display: none;

    &.show-backdrop {
      display: block;
    }
  }

  [class^='txn-status-'] {
    display: block;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    width: 12px;
    height: 12px;
    border-radius: 6px;
  }

  .txn-status-confirmed,
  .txn-status-enabled {
    background-color: $green;
  }
}

